--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
