--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
